# utilbot-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  recursivestring.py  recursivestring.py.old  requirements.txt  search.py
cogs/: dev.py  messages.py  mimic.py  occasionaldm.py  search.py  tex.py  utility.py
