[project]
name = "utilbot-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "discord-py-self==2.1.0",
    "pdf2png>=1.0.0",
    "python-dotenv==1.0.1",
    "regex==2024.11.6",
]

[dependency-groups]
dev = [
    "pre-commit==4.2.0",
]
